# nars

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  todo.txt
src/: logger.rs  main.rs  ollama.rs  parser.rs
src/editor/: mod.rs
src/editor/languages/: mod.rs  rust.rs  zig.rs
src/models/: mod.rs  parser.rs
test/: pred.rs
