[package]
name = "nars"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.25"
tree-sitter = "0.20"
cc = "1.2.9"
chrono = "0.4.39"
reqwest = { version = "0.12.12", features = ["json", "stream"] }
serde = { version = "1.0.217", features = ["derive"] }
anyhow = "1.0.95"
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
futures-util = "0.3.31"
regex = "1.11.1"
ratatui = "0.29.0"

[build-dependencies]
cc = "1.0"
